<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MajimaSongSwapper"
    android:keepScreenOn="true">

    <ImageView
        android:id="@+id/majimaBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/majima_bw" />

    <ImageButton
        android:id="@+id/Thug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/majima_thug"
        android:onClick="playThug"
        android:text="@string/thug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thug_icon" />

    <ImageButton
        android:id="@+id/Breaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/majima_breaker"
        android:onClick="playBreaker"
        android:text="@string/breaker"
        app:layout_constraintBottom_toTopOf="@+id/Slugger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Thug"
        app:layout_constraintVertical_bias="0.501"
        app:srcCompat="@drawable/breaker_icon" />

    <ImageButton
        android:id="@+id/Slugger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/majima_slugger"
        android:onClick="playSlugger"
        android:text="@string/slugger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/slugger_icon" />

    <ImageButton
        android:id="@+id/KiryuSwap"
        android:layout_width="122dp"
        android:layout_height="153dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/majima_swap"
        android:onClick="kiryuSwap"
        android:scaleType="fitXY"
        android:text="@string/kiryuSwap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        app:srcCompat="@drawable/majima_tattoo" />

    <ImageButton
        android:id="@+id/Legend"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/legend" />

</androidx.constraintlayout.widget.ConstraintLayout>